--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 
 .block-main {
     text-align: center;
-    margin: 100px;
+    margin: 100px auto;
 }
 
 /*
@@ -156,5 +156,108 @@ body {
     text-align: center;
     font-size: 15px;
     margin: 50px 0 20px;
+}
 
+/*
+* タブレット用のスタイルシート
+*/
+/*@media screen and (max-width: 767px) {
+    .sub-title {
+        color: red;
+    }
+}*/
+
+/*
+* スマホ用のスタイルシート
+*/
+
+@media screen and (max-width: 767px) {
+    body {
+        min-width: 100%;
+    }
+    
+    /*
+    * [header]のスタイルシート
+    */
+
+    .block-header {
+        margin: 10px 0;
+        padding: 0 10px 1px;
+        box-shadow: 0 8px 8px -5px rgba(204, 204, 204, 0.3);
+    }
+    
+    .block-header a {
+        font-size: 31px;
+    }
+
+    /*
+    * [main]のスタイルシート
+    */
+
+    .block-main img {
+        width: 60%;
+        height: 60%;
+    }
+
+    .block-main {
+        margin: 50px auto;
+    }
+
+    /*
+    * [profile]のスタイルシート
+    */
+
+    .box-profile {
+        padding: 0 10px;
+    }
+    
+    .item-list {
+        max-width: 100%;
+    }
+    
+    .item-list b {
+        font-size: 20px;
+    }
+
+    .item-list p {
+        font-size: 14px;
+    }
+
+    .icon-list li {
+        margin-right: 5px;
+    }
+
+    .icon-list {
+        max-width: 55%;
+        
+    }
+
+    /*
+    * [works]のスタイルシート
+    */
+
+    .box-works {
+        margin: 60px 0 0;
+        padding: 0 10px;
+    }
+    
+    .works-list {
+        max-width: 100%;
+    }
+
+    .works-list li {
+        max-width: 100%;
+        float: none;
+        margin-right: 0%;
+        margin-bottom: 30px;
+    } 
+
+    .works-list h3 {
+        font-size:  20px;
+        margin: 5px 0;
+    }
+
+    .works-list span {
+        font-size: 14px;
+    }
 }
