--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .sub-title {
-    font-size: 32px;
+    font-size: 30px;
 }
 
 /*
@@ -91,6 +91,7 @@ body {
 /*
 * [works]のスタイルシート
 */
+
 .box-works {
     margin: 80px 0 0;
     text-align: center;
@@ -99,7 +100,8 @@ body {
 .works-list {
     list-style: none;
     width: 100%;
-    max-width: 30px auto;
+    max-width: 1076px;
+    margin: 30px auto;
     padding: 0;
     text-align: left;
     overflow: hidden;
@@ -128,7 +130,7 @@ body {
 }
 
 .works-list li span {
-    font-size: 18px;
+    font-size: 14px;
 }
 
 .works-list li .link {
@@ -258,6 +260,6 @@ body {
     }
 
     .works-list span {
-        font-size: 14px;
+        font-size: 14px
     }
 }
